--- a/app/src/main/res/layout/activity_profileactivity.xml
+++ b/app/src/main/res/layout/activity_profileactivity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profileactivity">
+    tools:context=".ProfileActivity">
 
     <TextView
         android:id="@+id/useremail"
@@ -23,6 +23,7 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         app:cardCornerRadius="90dp"
+        app:cardElevation="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -35,31 +36,48 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            app:strokeWidth="2dp"
+            app:strokeColor="@color/black"
             />
 
     </androidx.cardview.widget.CardView>
 
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonUpload"
         android:layout_width="138dp"
         android:layout_height="60dp"
         android:text="Upload Photo"
         android:layout_marginTop="20dp"
+        android:background="@drawable/button_shapes"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logout"
         android:layout_width="138dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:text="Log out"
+        android:background="@drawable/button_shapes"
         app:layout_constraintEnd_toEndOf="@+id/buttonUpload"
         app:layout_constraintStart_toStartOf="@+id/buttonUpload"
         app:layout_constraintTop_toBottomOf="@+id/buttonUpload" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/backbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_shapes"
+        android:text="Back"
+        android:layout_marginStart="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/logout"
+        app:layout_constraintEnd_toStartOf="@+id/logout"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logout"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ProgressBar
         android:id="@+id/progressBar"
